<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connexion"
    android:orientation="vertical"
    android:gravity="center"
    >

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/nom_d_utilisateur" />

    <View
        android:layout_width="match_parent"
        android:layout_height="27dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btn_Inscription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:text="@string/inscription"
        android:background="@android:color/transparent"
        android:textColor="@color/black"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="59dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

    <Button
            android:id="@+id/btn_Connexion"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:text="@string/connexion" />

        <ProgressBar
            android:id="@+id/loadingPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </RelativeLayout>




</LinearLayout>