<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dl_tiroir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Consultation">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Consultation">

        <View
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_de_fin"
                android:textSize="20dp"

                />

            <TextView
                android:id="@+id/tvDateFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 2021-10-01"
                android:textSize="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avancement"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/tvProgression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.1"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"
                android:textSize="20dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temps_ecoule"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/tvPourcentageTempsEcoule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 30%"
                android:textSize="20dp"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loadingPanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btn_Save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/modifier"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/supprimer"
            android:layout_weight="1"
            android:layout_gravity="end"
            />
    </LinearLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nv_tiroir"
        app:menu="@menu/tiroir"
        app:headerLayout="@layout/nav_header"/> <!-- Référence au menu et à l'en-tête créé. -->

</androidx.drawerlayout.widget.DrawerLayout>
