<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dl_tiroir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Creation">

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Creation"
            android:orientation="vertical"
            android:gravity="center">


            <EditText
                android:id="@+id/etNomTache"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/nom_de_la_tache" />

            <View
                android:layout_width="match_parent"
                android:layout_height="27dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veuillez_choisir_une_date_decheance"
                android:textSize="15sp"
                android:textStyle="bold"
                />

            <CalendarView
                android:id="@+id/calendrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="59dp" />

            <ProgressBar
                android:id="@+id/loadingPanel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/btn_Creation"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:text="@string/creer"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nv_tiroir"
        app:menu="@menu/tiroir"
        app:headerLayout="@layout/nav_header"/> <!-- Référence au menu et à l'en-tête créé. -->

</androidx.drawerlayout.widget.DrawerLayout>